--- a/diligenciasinternacionalesinc/src/Styles/ModalCliente.css
+++ b/diligenciasinternacionalesinc/src/Styles/ModalCliente.css
@@ -123,3 +123,9 @@ h2 {
 .btn-cancelar:hover {
   background-color: #e0e0e0;
 }
+.error {
+  color: red;
+  font-size: 0.85rem;
+  margin-top: -0.5rem;
+  margin-bottom: 0.5rem;
+}
